fixed margin issue for back button on small screens

--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -88,6 +88,10 @@
 
   .left {
     order: 1;
+
+    a {
+      margin-bottom: 2rem;
+    }
   }
 
   .image {
